# YOLO-Converter

./: .gitignore  LICENSE  Readme.md  formats.json  main.py  pyproject.toml  requirements.txt
format_crawler/: scrapy.cfg  yolo_format_mapping.json
format_crawler/format_crawler/: items.py  middlewares.py  pipelines.py  settings.py
format_crawler/format_crawler/spiders/: yoloformat_spider.py
