[project]
name = "stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "coremltools>=9.0",
    "numpy>=2.2.6",
    "onnx>=1.19.1",
    "onnx-graphsurgeon>=0.5.8",
    "onnx-simplifier>=0.4.36",
    "onnx2tf>=1.28.3",
    "onnxoptimizer>=0.3.13",
    "onnxruntime>=1.23.2",
    "onnxruntime-tools>=1.7.0",
    "openvino>=2025.3.0",
    "paddlepaddle>=2.6.0",
    "pillow>=12.0.0",
    "protobuf>=6.33.0",
    "scrapy>=2.13.4",
    "streamlit>=1.51.0",
    "sympy>=1.14.0",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "ultralytics[openvino]>=8.3.227",
    "x2paddle>=1.6.0",
]
